@@ -1,5 +1,8 @@
 Version 1.13.11:
  * WML Engine:
+   * File paths with backslashes are no longer allowed. This ensures that a UMC
+     author can't accidentally use them and make an add-on that breaks on
+     GNU/Linux and macOS.
    * File paths are now case sensitive even on Windows.
 
 Version 1.13.10:
